# haber-ozetleri-

./: .replit  README.md  feeds.json  main.py  package-lock.json  package.json  pyproject.toml  rss_utils.py  summarizer.py  web_scraper.py
RSSFeedSummaryApp/: App.js  app.json  package-lock.json  package.json
RSSFeedSummaryApp/screens/: FeedScreen.js  HomeScreen.js
