[project]
name = "repl-nix-rssummarizer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chardet>=5.2.0",
    "feedparser>=6.0.11",
    "nltk>=3.9.1",
    "openai>=1.51.2",
    "pandas>=2.2.3",
    "streamlit>=1.39.0",
    "trafilatura>=1.12.2",
]
